# parallel-computing-project

./: CMakeLists.txt  INPUT.txt  InputParameters.h  PointCloud.cpp  PointCloud.h  README.md  main.cpp  run  run_cmake.sh
include/: Distribution.h  InputParameters.h  VDistribution.h
input/: INPUT.txt  INPUT_test.txt  POINTS.txt
src/: Distribution.cpp  InputParameters.cpp  VDistribution.cpp
